Add task to remove default conf file

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -6,12 +6,18 @@
     installer_repositories: "{{ php_repositories }}"
     installer_packages: "{{ php_packages }}"
 
-- name: Disable default config
+- name: Copy default config
   become: true
   ansible.builtin.copy:
     src: "{{ php_file_path }}/www.conf"
     dest: "{{ php_file_path }}/www.conf.example"
     remote_src: true
+
+- name: Remove default config
+  become: true
+  ansible.builtin.file:
+    path: "{{ php_file_path }}/www.conf"
+    state: absent
   notify: restart php
 
 - name: Copy php config files
