--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -6,21 +6,55 @@
     installer_repositories: "{{ php_repositories }}"
     installer_packages: "{{ php_packages }}"
 
-- name: Remove default config
+- name: Remove default pool config
   become: true
   ansible.builtin.file:
-    path: "{{ php_file_path }}/www.conf"
+    path: "{{ php_poold_path }}/www.conf"
     state: absent
   notify: restart php
 
-- name: Copy php config files
+- name: Copy php config file
+  become: true
+   ansible.builtin.copy:
+    src: "{{ item }}"
+    dest: "{{ php_path }}/{{ item | basename }}"
+    owner: "{{ php_file_owner }}"
+    group: "{{ php_file_group }}"
+    mode: "{{ php_file_mode }}"
+  with_first_found:
+    files:
+     - "{{ php_local_config_file }}"
+    skip: true
+  notify:
+    - test configuration
+    - restart php
+
+- name: Copy php ini file
+  become: true
+   ansible.builtin.copy:
+    src: "{{ item }}"
+    dest: "{{ php_path }}/{{ item | basename }}"
+    owner: "{{ php_file_owner }}"
+    group: "{{ php_file_group }}"
+    mode: "{{ php_file_mode }}"
+  with_first_found:
+    files:
+     - "{{ php_local_phpini_file }}"
+    skip: true
+  notify:
+    - test configuration
+    - restart php
+
+- name: Copy php pool.d files
   become: true
   ansible.builtin.copy:
     src: "{{ item }}"
-    dest: "{{ php_file_path }}"
+    dest: "{{ php_poold_path }}"
     owner: "{{ php_file_owner }}"
     group: "{{ php_file_group }}"
     mode: "{{ php_file_mode }}"
   with_fileglob:
-    - "{{ php_local_path }}/*.conf"
-  notify: restart php
+    - "{{ php_local_poold_path }}/*.conf"
+  notify:
+    - test configuration
+    - restart php
