--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -1,4 +1,10 @@
 ---
+- name: Stop php service
+  become: true
+  ansible.builtin.service:
+    name: "php{{ php_version }}-fpm"
+    state: stopped
+
 - name: Remove repositories for php and uninstall it
   ansible.builtin.import_role:  
     name: ansible-role-installer
