--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,7 +2,8 @@
 php_repositories:
   - ppa:ondrej/php
 
-php_file_path: "/etc/php/{{ php_version }}/fpm/pool.d/"
+php_path: "/etc/php/{{ php_version }}/fpm/"
+php_poold_path: "{{ php_path }}/pool.d/"
 php_file_owner: root
 php_file_group: root
 php_file_mode: "644"
