--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -21,6 +21,7 @@
     owner: "{{ php_file_owner }}"
     group: "{{ php_file_group }}"
     mode: "{{ php_file_mode }}"
+    force: true
   with_first_found:
     files:
       - "{{ php_local_config_file }}"
@@ -37,6 +38,7 @@
     owner: "{{ php_file_owner }}"
     group: "{{ php_file_group }}"
     mode: "{{ php_file_mode }}"
+    force: true
   with_first_found:
     files:
       - "{{ php_local_phpini_file }}"
@@ -53,6 +55,7 @@
     owner: "{{ php_file_owner }}"
     group: "{{ php_file_group }}"
     mode: "{{ php_file_mode }}"
+    force: true
   with_fileglob:
     - "{{ php_local_poold_path }}/*.conf"
   notify:
