--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,12 +1,12 @@
 ---
-- name: test configuration
+- name: test php-fpm
   become: true
   ansible.builtin.command:
     cmd: "{{ php_version }}-fpm -t"
   register: result
   failed_when: "'failed' in result.stdout"
 
-- name: restart php
+- name: restart php-fpm
   become: true
   ansible.builtin.service:
     name: "php{{ php_version }}-fpm"
