--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -6,58 +6,81 @@
     installer_repositories: "{{ php_repositories }}"
     installer_packages: "{{ php_packages }}"
 
-- name: Remove default pool config
-  become: true
-  ansible.builtin.file:
-    path: "{{ php_poold_path }}/www.conf"
-    state: absent
-  notify: restart php
+- name: php cli
+  when: "'php' + php_version + '-cli' in php_packages"
+  block:
+    - name: Copy php cli ini file
+      become: true
+      ansible.builtin.copy:
+        src: "{{ item }}"
+        dest: "{{ php_cli_path }}/php.ini"
+        owner: "{{ php_file_owner }}"
+        group: "{{ php_file_group }}"
+        mode: "{{ php_file_mode }}"
+        force: true
+      with_first_found:
+        - files:
+            - "{{ php_cli_local_ini_file }}"
+          skip: true
+      notify:
+        - test php-fpm
+        - restart php-fpm
 
-- name: Copy php config file
-  become: true
-  ansible.builtin.copy:
-    src: "{{ item }}"
-    dest: "{{ php_path }}/{{ item | basename }}"
-    owner: "{{ php_file_owner }}"
-    group: "{{ php_file_group }}"
-    mode: "{{ php_file_mode }}"
-    force: true
-  with_first_found:
-    - files:
-        - "{{ php_local_config_file }}"
-      skip: true
-  notify:
-    - test configuration
-    - restart php
+- name: php fpm
+  when: "'php' + php_version + '-fpm' in php_packages"
+  block:
+    - name: Remove php fpm default pool config
+      become: true
+      ansible.builtin.file:
+        path: "{{ php_fpm_poold_path }}/www.conf"
+        state: absent
+      notify: restart php-fpm
 
-- name: Copy php ini file
-  become: true
-  ansible.builtin.copy:
-    src: "{{ item }}"
-    dest: "{{ php_path }}/{{ item | basename }}"
-    owner: "{{ php_file_owner }}"
-    group: "{{ php_file_group }}"
-    mode: "{{ php_file_mode }}"
-    force: true
-  with_first_found:
-    - files:
-        - "{{ php_local_phpini_file }}"
-      skip: true
-  notify:
-    - test configuration
-    - restart php
+    - name: Copy php fpm config file
+      become: true
+      ansible.builtin.copy:
+        src: "{{ item }}"
+        dest: "{{ php_fpm_path }}/php-fpm.conf"
+        owner: "{{ php_file_owner }}"
+        group: "{{ php_file_group }}"
+        mode: "{{ php_file_mode }}"
+        force: true
+      with_first_found:
+        - files:
+            - "{{ php_fpm_local_config_file }}"
+          skip: true
+      notify:
+        - test php-fpm
+        - restart php-fpm
 
-- name: Copy php pool.d files
-  become: true
-  ansible.builtin.copy:
-    src: "{{ item }}"
-    dest: "{{ php_poold_path }}"
-    owner: "{{ php_file_owner }}"
-    group: "{{ php_file_group }}"
-    mode: "{{ php_file_mode }}"
-    force: true
-  with_fileglob:
-    - "{{ php_local_poold_path }}/*.conf"
-  notify:
-    - test configuration
-    - restart php
+    - name: Copy php fpm ini file
+      become: true
+      ansible.builtin.copy:
+        src: "{{ item }}"
+        dest: "{{ php_fpm_path }}/php.ini"
+        owner: "{{ php_file_owner }}"
+        group: "{{ php_file_group }}"
+        mode: "{{ php_file_mode }}"
+        force: true
+      with_first_found:
+        - files:
+            - "{{ php_fpm_local_ini_file }}"
+          skip: true
+      notify:
+        - test php-fpm
+        - restart php-fpm
+
+    - name: Copy php fpm pool.d files
+      become: true
+      ansible.builtin.copy:
+        src: "{{ item }}"
+        dest: "{{ php_fpm_poold_path }}"
+        owner: "{{ php_file_owner }}"
+        group: "{{ php_file_group }}"
+        mode: "{{ php_file_mode }}"
+        force: true
+      with_fileglob:
+        - "{{ php_fpm_local_poold_path }}/*.conf"
+      notify:
+        - test php-fpm
+        - restart php-fpm
