--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,6 +6,4 @@ php_path: "/etc/php/{{ php_version }}"
 php_cli_path: "{{ php_path }}/cli/"
 php_fpm_path: "{{ php_path }}/fpm/"
 php_fpm_poold_path: "{{ php_fpm_path }}/pool.d/"
-php_file_owner: root
-php_file_group: root
-php_file_mode: "644"
+php_file_mode: 0644
