--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -1,5 +1,6 @@
 ---
 - name: Stop php service
+  when: "'php' + php_version + '-fpm' in php_packages"
   become: true
   ansible.builtin.service:
     name: "php{{ php_version }}-fpm"
