--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -3,9 +3,9 @@
   ansible.builtin.import_role:
     name: ansible-role-aptkey
   vars:
-    aptkey_url: php_key_url
-    aptkey_name: php_key_name
-    aptkey_path: php_key_path
+    aptkey_url: "{{ php_key_url }}"
+    aptkey_name: "{{ php_key_name }}"
+    aptkey_path: "{{ php_key_path }}"
 
 - name: Add repositories for php and install it
   ansible.builtin.import_role:  
