--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -18,6 +18,6 @@
   ansible.builtin.import_role:
     name: ansible-role-aptkey
   vars:
-    aptkey_name: php_key_name
-    aptkey_path: php_key_path
+    aptkey_name: "{{ php_key_name }}"
+    aptkey_path: "{{ php_key_path }}"
     aptkey_uninstall: true
