--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -7,80 +7,18 @@
     aptkey_name: "{{ php_key_name }}"
     aptkey_path: "{{ php_key_path }}"
 
-- name: Add repositories for php and install it
-  ansible.builtin.import_role:  
-    name: ansible-role-installer
-  vars:
-    installer_repositories: "{{ php_repositories }}"
-    installer_packages: "{{ php_packages }}"
+- name: Ensure that repositories are installed
+  become: true
+  ansible.builtin.apt_repository:
+    repo: "{{ item }}"
+    update_cache: true
+    state: present
+  loop: "{{ php_repositories }}"
 
-- name: php cli
-  when: "'php' + php_version + '-cli' in php_packages"
-  block:
-    - name: Copy php cli ini file
-      become: true
-      ansible.builtin.copy:
-        src: "{{ item }}"
-        dest: "{{ php_cli_path }}/php.ini"
-        mode: "{{ php_file_mode }}"
-        force: true
-      with_first_found:
-        - files:
-            - "{{ php_cli_local_ini_file }}"
-          skip: true
-      notify:
-        - test php-fpm
-        - restart php-fpm
-
-- name: php fpm
-  when: "'php' + php_version + '-fpm' in php_packages"
-  block:
-    - name: Remove php fpm default pool config
-      become: true
-      ansible.builtin.file:
-        path: "{{ php_fpm_poold_path }}/www.conf"
-        state: absent
-      notify: restart php-fpm
-
-    - name: Copy php fpm config file
-      become: true
-      ansible.builtin.copy:
-        src: "{{ item }}"
-        dest: "{{ php_fpm_path }}/php-fpm.conf"
-        mode: "{{ php_file_mode }}"
-        force: true
-      with_first_found:
-        - files:
-            - "{{ php_fpm_local_conf_file }}"
-          skip: true
-      notify:
-        - test php-fpm
-        - restart php-fpm
-
-    - name: Copy php fpm ini file
-      become: true
-      ansible.builtin.copy:
-        src: "{{ item }}"
-        dest: "{{ php_fpm_path }}/php.ini"
-        mode: "{{ php_file_mode }}"
-        force: true
-      with_first_found:
-        - files:
-            - "{{ php_fpm_local_ini_file }}"
-          skip: true
-      notify:
-        - test php-fpm
-        - restart php-fpm
-
-    - name: Copy php fpm pool.d files
-      become: true
-      ansible.builtin.copy:
-        src: "{{ item }}"
-        dest: "{{ php_fpm_poold_path }}"
-        mode: "{{ php_file_mode }}"
-        force: true
-      with_fileglob:
-        - "{{ php_fpm_local_poold_path }}/*.conf"
-      notify:
-        - test php-fpm
-        - restart php-fpm
+- name: Ensure that packages are installed
+  become: true
+  ansible.builtin.apt:
+    name: "{{ item }}"
+    update_cache: true
+    state: present
+  loop: "{{ php_packages }}"
