--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,7 +1,7 @@
 ---
-php_key_url: https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x4f4ea0aae5267a6c
+php_key_url: https://keyserver.ubuntu.com/pks/lookup?op=get&search=0xB8DC7E53946656EFBCE4C1DD71DAEAAB4AD4CAB6
 php_key_path: /etc/apt/keyrings/
-php_key_name: ppa_ondrej_php.gpg
+php_key_name: ppa_ondrej_php.asc
 
 php_repositories:
   - deb [signed-by={{ php_key_path }}{{ php_key_name }}] https://ppa.launchpadcontent.net/ondrej/php/ubuntu {{ ansible_distribution_release }} main 
